; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_addrconf.c_inet6_netconf_notify_devconf.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_addrconf.c_inet6_netconf_notify_devconf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { i32 }
%struct.ipv6_devconf = type { i32 }
%struct.sk_buff = type { i32 }

@ENOBUFS = common dso_local global i32 0, align 4
@GFP_KERNEL = common dso_local global i32 0, align 4
@EMSGSIZE = common dso_local global i32 0, align 4
@RTNLGRP_IPV6_NETCONF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @inet6_netconf_notify_devconf(%struct.net* %0, i32 %1, i32 %2, i32 %3, %struct.ipv6_devconf* %4) #0 {
  %6 = alloca %struct.net*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.ipv6_devconf*, align 8
  %11 = alloca %struct.sk_buff*, align 8
  %12 = alloca i32, align 4
  store %struct.net* %0, %struct.net** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store %struct.ipv6_devconf* %4, %struct.ipv6_devconf** %10, align 8
  %13 = load i32, i32* @ENOBUFS, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %12, align 4
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @inet6_netconf_msgsize_devconf(i32 %15)
  %17 = load i32, i32* @GFP_KERNEL, align 4
  %18 = call %struct.sk_buff* @nlmsg_new(i32 %16, i32 %17)
  store %struct.sk_buff* %18, %struct.sk_buff** %11, align 8
  %19 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %20 = icmp ne %struct.sk_buff* %19, null
  br i1 %20, label %22, label %21

21:                                               ; preds = %5
  br label %46

22:                                               ; preds = %5
  %23 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %24 = load i32, i32* %9, align 4
  %25 = load %struct.ipv6_devconf*, %struct.ipv6_devconf** %10, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @inet6_netconf_fill_devconf(%struct.sk_buff* %23, i32 %24, %struct.ipv6_devconf* %25, i32 0, i32 0, i32 %26, i32 0, i32 %27)
  store i32 %28, i32* %12, align 4
  %29 = load i32, i32* %12, align 4
  %30 = icmp slt i32 %29, 0
  br i1 %30, label %31, label %40

31:                                               ; preds = %22
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* @EMSGSIZE, align 4
  %34 = sub nsw i32 0, %33
  %35 = icmp eq i32 %32, %34
  %36 = zext i1 %35 to i32
  %37 = call i32 @WARN_ON(i32 %36)
  %38 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %39 = call i32 @kfree_skb(%struct.sk_buff* %38)
  br label %46

40:                                               ; preds = %22
  %41 = load %struct.sk_buff*, %struct.sk_buff** %11, align 8
  %42 = load %struct.net*, %struct.net** %6, align 8
  %43 = load i32, i32* @RTNLGRP_IPV6_NETCONF, align 4
  %44 = load i32, i32* @GFP_KERNEL, align 4
  %45 = call i32 @rtnl_notify(%struct.sk_buff* %41, %struct.net* %42, i32 0, i32 %43, i32* null, i32 %44)
  br label %51

46:                                               ; preds = %31, %21
  %47 = load %struct.net*, %struct.net** %6, align 8
  %48 = load i32, i32* @RTNLGRP_IPV6_NETCONF, align 4
  %49 = load i32, i32* %12, align 4
  %50 = call i32 @rtnl_set_sk_err(%struct.net* %47, i32 %48, i32 %49)
  br label %51

51:                                               ; preds = %46, %40
  ret void
}

declare dso_local %struct.sk_buff* @nlmsg_new(i32, i32) #1

declare dso_local i32 @inet6_netconf_msgsize_devconf(i32) #1

declare dso_local i32 @inet6_netconf_fill_devconf(%struct.sk_buff*, i32, %struct.ipv6_devconf*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @kfree_skb(%struct.sk_buff*) #1

declare dso_local i32 @rtnl_notify(%struct.sk_buff*, %struct.net*, i32, i32, i32*, i32) #1

declare dso_local i32 @rtnl_set_sk_err(%struct.net*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
